build/log/idf_py_stderr_output_44058
/home/pi/httptc/main/nvs_store.c: In function 'save_target_temp':
/home/pi/httptc/main/nvs_store.c:10:96: error: 'target_temp' undeclared (first use in this function); did you mean 'save_target_temp'?
   10 |     err = nvs_set_blob(handle, "target", (void*)&(struct { float temp; int output_delay_ms; }){target_temp, output_delay_ms}, sizeof(float) + sizeof(int));
      |                                                                                                ^~~~~~~~~~~
      |                                                                                                save_target_temp
/home/pi/httptc/main/nvs_store.c:10:96: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/httptc/main/nvs_store.c: In function 'load_target_temp':
/home/pi/httptc/main/nvs_store.c:32:6: error: 'target_temp' undeclared (first use in this function); did you mean 'load_target_temp'?
   32 |     *target_temp = settings.temp;
      |      ^~~~~~~~~~~
      |      load_target_temp
/home/pi/httptc/main/nvs_store.c:33:6: error: 'output_delay_ms' undeclared (first use in this function)
   33 |     *output_delay_ms = settings.output_delay_ms;
      |      ^~~~~~~~~~~~~~~
/home/pi/httptc/main/nvs_store.c:35:12: error: 'err' undeclared (first use in this function)
   35 |     return err;
      |            ^~~
/home/pi/httptc/main/nvs_store.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:108: esp-idf/main/CMakeFiles/__idf_main.dir/nvs_store.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
